actually update electron and fix scrollbar issue

--- a/src/app/components/goal-section/goal-section.component.css
+++ b/src/app/components/goal-section/goal-section.component.css
@@ -25,5 +25,5 @@ button{
 }
 textarea{
   flex: 0;
-  overflow-y: hidden;
+  overflow-y: hidden !important;
 }
