--- a/src/app/components/goal/goal.component.css
+++ b/src/app/components/goal/goal.component.css
@@ -35,4 +35,5 @@ mat-slider{
 }
 textarea{
   display: flex;
+  overflow-y: hidden !important;
 }
