--- a/src/app/files/files.component.css
+++ b/src/app/files/files.component.css
@@ -13,6 +13,7 @@
   flex-direction: row;
 }
 textarea{
+  overflow-y: hidden !important;
   text-align: center;
   height: 30px;
 }
